# cdesktopenv

./: CONTRIBUTORS  HISTORY  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac
lib/DtTerm/TermPrim/: Makefile.am  Makefile.in  TermPrim.c  TermPrimAction.c  TermPrimDebug.c  TermPrimFunction.c  TermPrimGetPty-bsd.c  TermPrimGetPty-clone.c  TermPrimLineDraw.c  TermPrimOSDepI.h  TermPrimParser.c  TermPrimRender.c  TermPrimRenderMb.c  TermPrimScroll.c  TermPrimSelect.c  TermPrimSetPty.c  TermPrimSetUtmp.c  TermPrimSubproc.c  TermPrimUtil.c
programs/dtksh/: .gitignore  Makefile.am  Makefile.in  dtkcmds.c  dtkcmds.h
programs/dtksh/examples/: Makefile.in
programs/dtksh/ksh93/: .gitignore  ANNOUNCE  COPYRIGHT  LICENSE.md  NEWS  README.md  TODO
programs/dtksh/ksh93/.github/workflows/: ci.yml
programs/dtksh/ksh93/docs/ksh/: builtins.html  faq.html  features.html
programs/dtksh/ksh93/src/: Mamfile
programs/dtksh/ksh93/src/cmd/INIT/: C+probe  Mamfile  README-mamake.md  RELEASE  ar.ibm.risc  ar.ibm.risc-64  cc.hp.ia64  cc.hp.pa  cc.hp.pa64  cc.ibm.risc  cc.ibm.risc.gcc  cc.mvs.390  cc.next.i386  cc.next.m68k  cc.sgi.mips2  cc.sgi.mips3  cc.sgi.mips3-o32  cc.sgi.mips4  cc.sgi.mips4-n32  crossexec.sh  db.c  dl.c  execrate.sh  filter.sh  gdbm.c  gdbm1.c  gdbm2.c  hello.c  iconv.c  iffe.sh  iffe.tst  intl.c  ldd.cygwin.i386  ldd.darwin  m.c  m2.c  m3.c  m4.c  m5.c  m6.c  (+16 more)
programs/dtksh/ksh93/src/cmd/builtin/: Mamfile  RELEASE  pty.c
programs/dtksh/ksh93/src/cmd/builtin/features/: pty
programs/dtksh/ksh93/src/cmd/ksh93/: COMPATIBILITY  DESIGN  Mamfile  OBSOLETE  PROMO.mm  README  README-AUDIT.md  RELEASE  RELEASE88  RELEASE93  SHOPT.sh  TYPES  builtins.mm  ksh-regress.rt  ksh-regress.tst  mamexec  mamstate.c  nval.3  sh.1  sh.memo  shell.3
programs/dtksh/ksh93/src/cmd/ksh93/bltins/: cd_pwd.c  cflow.c  enum.c  getopts.c  hist.c  misc.c  mkservice.c  print.c  read.c  regress.c  sleep.c  test.c  trap.c  typeset.c  ulimit.c  umask.c  whence.c
programs/dtksh/ksh93/src/cmd/ksh93/data/: aliases.c  builtins.c  keywords.c  lexstates.c  limits.c  math.tab  msg.c  options.c  signals.c  strdata.c  testops.c  variables.c
programs/dtksh/ksh93/src/cmd/ksh93/edit/: completion.c  edit.c  emacs.c  hexpand.c  history.c  vi.c
programs/dtksh/ksh93/src/cmd/ksh93/features/: cmds  externs  locale  math.sh  options  poll  rlimits
programs/dtksh/ksh93/src/cmd/ksh93/fun/: autocd  man
programs/dtksh/ksh93/src/cmd/ksh93/include/: argnod.h  builtins.h  defs.h  edit.h  fault.h  fcin.h  history.h  io.h  jobs.h  lexstates.h  name.h  national.h  nval.h  path.h  regress.h  shell.h  shlex.h  shnodes.h  shtable.h  streval.h  terminal.h  test.h  timeout.h  ulimit.h  variables.h  version.h
programs/dtksh/ksh93/src/cmd/ksh93/sh/: args.c  arith.c  array.c  defs.c  deparse.c  expand.c  fault.c  fcin.c  io.c  jobs.c  lex.c  macro.c  main.c  name.c  nvdisc.c  nvtree.c  nvtype.c  parse.c  path.c  pmain.c  shcomp.c  streval.c  string.c  subshell.c  suid_exec.c  tdump.c  timers.c  trestore.c  waitevent.c  xec.c
programs/dtksh/ksh93/src/cmd/ksh93/tests/: _common  io.sh  (+55 more)
programs/dtksh/ksh93/src/lib/: Mamfile
programs/dtksh/ksh93/src/lib/libast/: Mamfile  README  RELEASE
programs/dtksh/ksh93/src/lib/libcmd/: Mamfile  RELEASE  basename.c  cat.c  chgrp.c  chmod.c  chown.c  cksum.c  cmd.h  cmdinit.c  cmp.c  comm.c  cp.c  cut.c  date.c  dirname.c  expr.c  fds.c  fmt.c  fold.c  getconf.c  head.c  id.c  join.c  lib.c  ln.c  logname.c  md5sum.c  mkdir.c  mkfifo.c  mktemp.c  mv.c  paste.c  pathchk.c  pids.c  rev.c  rev.h  revlib.c  rm.c  rmdir.c  (+12 more)
programs/dtksh/ksh93/src/lib/libdll/: Mamfile  RELEASE  dlfcn.c  dll_lib.c  dllcheck.c  dllerror.c  dllfind.c  dlllib.h  dlllook.c  dllnext.c  dllopen.c  dllplug.c  dllscan.c
programs/dtksh/ksh93/src/lib/libsum/: Mamfile  RELEASE  sum-ast4.c  sum-att.c  sum-bsd.c  sum-crc.c  sum-lmd.c  sum-md5.c  sum-prng.c  sum-sha1.c  sum-sha2.c  sum.h  sumlib.c
programs/dtopen/: Makefile.am  Makefile.in
(+1703 files in other folders)
